# witch

./: .flaskenv  .gitignore  Procfile  README.md  TODO.yaml  app.json  pyproject.toml  requirements.txt
graphql/: operations.graphql
tests/: test_witch.py
witch/: __init__.py  app.py  decorators.py  default_settings.py  graphql.py  query.py  session.py  templated.py  ytdl.py
witch/graphql/: __init__.py  operations.py  queries.py
witch/static/: styles.css
witch/templates/: _base.html.jinja2  clip.html.jinja2  clips.html.jinja2  embed.html.jinja2  embed_streamer.html.jinja2  index.html.jinja2  layout.html.jinja2  macros.html.jinja2  multi.html.jinja2  streamer.html.jinja2  streamer_profile.html.jinja2  videos.html.jinja2  vod.html.jinja2
witch/templates/partials/: stream.html.jinja2
