[tool.poetry]
name = "witch"
version = "0.1.0"
description = "A very slapdash alternative to Twitch powered by youtube-dl and Flask."
authors = ["Kyle Anthony Williams <kyle.anthony.williams2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
youtube_dl = "^2021.1.16"
Flask = "^1.1.2"
requests = "^2.25.1"
twitch-sgqlc = {git = "https://github.com/SuperSonicHub1/twitch_sgqlc.git"}
sgqlc = {version = "^12.1", extras = ["requests"]}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-dotenv = "^0.15.0"
black = {version = "^20.8b1", allow-prereleases = true}
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
